# so2wrap

./: Cargo.toml  LICENSE.txt  README.md  all.html  crates.js  help.html  index.html  settings.html  src-files.js
.github/workflows/: rustdoc.yml
bound_socket/: index.html  struct.BoundSocket.html  struct.ListeningSocket.html
examples/: client.rs  server.rs
search.index/: 12eb45bc3f94.js  5396519f60f8.js  6c45514ddcf4.js  747ac765a45e.js  root.js
search.index/crateNames/: 9a20451acbd8.js
search.index/desc/: 087c0d21f634.js  3c31dcffd887.js  cbe138557a44.js
search.index/entry/: 3e8b2305bab2.js  5903a8dc88e8.js
search.index/function/: 03beb9740197.js  6646b33d593c.js
search.index/generic_inverted_index/: 3a0b6b7a9033.js
search.index/name/: 7478808d5d77.js  980ac6521de8.js
search.index/normalizedName/: 07c8e88b883f.js  2ab39bdfa30c.js
search.index/path/: e14ef20996ac.js  e9ebdad236f3.js
search.index/type/: 6515fe81d66f.js  b113c62f5b4c.js
so2wrap/: all.html  index.html  sidebar-items.js
so2wrap/bound_socket/: index.html  sidebar-items.js  struct.BoundSocket.html  struct.ListeningSocket.html
so2wrap/bound_tcp_socket/: index.html  struct.BoundSocket.html  struct.ListeningSocket.html
src/: bound_socket.rs  bound_tcp_socket.rs  lib.rs
src/so2wrap/: bound_socket.rs.html  bound_tcp_socket.rs.html  lib.rs.html
tests/: test_bound_socket.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/ops/drop/: trait.Drop.js
(+2 files in other folders)
