[package]
name = "so2wrap"
version = "0.1.0"
edition = "2024"

[dependencies]
socket2 = "0.6"
tokio = { version = "1", features = ["sync", "rt", "net", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
